...
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingTop="12dp">


        <ImageView
            android:id="@+id/ivMainImageDetail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1"
            android:src="@drawable/ic_baseline_photo_camera_24"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="Take Photo" />

        <Button
            android:id="@+id/btnImagePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Choose from Gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivMainImageDetail" />

        <EditText
            android:id="@+id/etPlaceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginTop="8dp"
            android:hint="Place Name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnImagePicker" />

        <EditText
            android:id="@+id/etPlaceDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="Place Description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
...
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationLayout" />

        <LinearLayout
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
                android:backgroundTint="@color/secondaryColor"
                android:contentDescription="cancel"
                android:text="cancel"
                app:srcCompat="@android:drawable/ic_menu_save" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="Check-in"
                android:text="Check-in"
                app:srcCompat="@android:drawable/ic_menu_save" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
...
