<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_gravity="center"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/ivPlaceImage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@android:color/darker_gray"
                android:contentDescription="Place Image"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_gravity="center"
            android:layout_weight="6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPlaceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Place name"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvPlaceDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Place Description"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Address"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp">

            <CheckBox
                android:id="@+id/imgPlaceFav"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:layout_weight="1"
                android:button="@drawable/is_fav_selector"
                android:contentDescription="is it Favourite?"
                 />

            <ImageButton
                android:id="@+id/btnRemove"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:scaleType="center"
                android:background="@android:color/transparent"
                android:contentDescription="Remove this checkpoint"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_delete" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>